# snake_tuner

./: Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md
examples/database/: Cargo.toml
examples/database/src/: main.rs
examples/hello_xor/: Cargo.toml
examples/hello_xor/src/: main.rs
src/: activation.rs  database.rs  dataloader.rs  evaluation.rs  lib.rs  net.rs  optimizer.rs  tuner.rs
