[package]
name = "snake_tuner"
version = "0.4.2"
edition = "2021"
authors = ["BrokenKeyboard"]
license = "MIT OR Apache-2.0"
description = "A simple tuner crate for battlesnakes"
repository = "https://github.com/InterestingBrainPoops/snake_tuner"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.2"
rand = "0.8.5"


[workspace]
members = [
    "examples/*"
]
